[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/enemyShip.png" type="Texture" id=1]
[ext_resource path="res://scripts/boss.gd" type="Script" id=2]
[ext_resource path="res://fonts/prstartk.ttf" type="DynamicFontData" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyShip:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "luz"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyShip:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 33.0

[sub_resource type="DynamicFont" id=4]
size = 7
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.988235, 0.0117647, 0.0117647, 0.780392 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.776471, 0.145098, 0.92549, 0.494118 )

[node name="boss" type="Node2D" groups=["boss"]]
position = Vector2( -22, 21 )
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 2 )
tiros = NodePath("tiros")

[node name="EnemyShip" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
hframes = 5

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "luz"
anims/RESET = SubResource( 1 )
anims/luz = SubResource( 2 )

[node name="blaster" type="Position2D" parent="."]
position = Vector2( 0, 31 )

[node name="area" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="area"]
position = Vector2( 0, 1 )
shape = SubResource( 3 )

[node name="gun_timer" type="Timer" parent="."]

[node name="move_timer" type="Timer" parent="."]

[node name="tiros" type="Node2D" parent="."]

[node name="Life" type="CanvasLayer" parent="."]

[node name="hp" type="Label" parent="Life"]
visible = false
margin_left = 142.0
margin_top = 4.0
margin_right = 158.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.988235, 0.968627, 0.968627, 1 )
custom_colors/font_outline_modulate = Color( 0.952941, 0.0823529, 0.0823529, 1 )
custom_colors/font_color_shadow = Color( 0.894118, 0.215686, 0.215686, 1 )
custom_fonts/font = SubResource( 4 )
text = "20"
align = 1

[node name="life" type="ProgressBar" parent="."]
margin_left = 33.3333
margin_top = 25.0
margin_right = 110.333
margin_bottom = 39.0
rect_rotation = 270.0
rect_scale = Vector2( 0.5, 0.2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
max_value = 20.0
step = 1.0
value = 20.0
percent_visible = false

[connection signal="area_entered" from="area" to="." method="_on_area_area_entered"]
[connection signal="timeout" from="gun_timer" to="." method="_on_gun_timer_timeout"]
[connection signal="timeout" from="move_timer" to="." method="_on_move_timer_timeout"]
